# c_game_project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: display_tetris.h
src/: display_menu.c  display_tetris.c  getch.c  main.c  update.c
